--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="switch.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>Good, Cheap, Fast</title>
   </head>
   <body>
@@ -31,6 +31,6 @@
       </label>
       <span>Fast</span>
     </div>
-    <script src="switch.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
